--- a/docs/latex/classAirline.tex
+++ b/docs/latex/classAirline.tex
@@ -1,5 +1,14 @@
 \hypertarget{classAirline}{}\doxysection{Airline Class Reference}
 \label{classAirline}\index{Airline@{Airline}}
+
+
+Represents an airline with information such as code, name, call sign, and country.  
+
+
+
+
+{\ttfamily \#include $<$Airline.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -18,6 +27,9 @@ std\+::string \mbox{\hyperlink{classAirline_a73e2c48e0d98eda7417b4a256881e6f1}{g
 bool \mbox{\hyperlink{classAirline_aab550db1265c3df4f66b90c2dea5f6cc}{operator==}} (const \mbox{\hyperlink{classAirline}{Airline}} \&other) const
 \begin{DoxyCompactList}\small\item\em Overloaded equality operator for comparing two airlines. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Represents an airline with information such as code, name, call sign, and country. 
 
 \doxysubsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{classAirline_a2e6766b5e3a4e3106062c710740a2a32}\label{classAirline_a2e6766b5e3a4e3106062c710740a2a32}} 
