--- a/docs/latex/classAirport.tex
+++ b/docs/latex/classAirport.tex
@@ -1,5 +1,14 @@
 \hypertarget{classAirport}{}\doxysection{Airport Class Reference}
 \label{classAirport}\index{Airport@{Airport}}
+
+
+Represents an airport with information such as code, name, city, country, location , etc...  
+
+
+
+
+{\ttfamily \#include $<$Airport.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -38,6 +47,9 @@ bool \mbox{\hyperlink{classAirport_a2d93e2cadbdb3ed9114aff48aa0bac5c}{operator==
 void \mbox{\hyperlink{classAirport_a5e29037a72b4121e224508b5e73603c7}{operator=}} (const \mbox{\hyperlink{classAirport}{Airport}} \&other)
 \begin{DoxyCompactList}\small\item\em Overloaded assignment operator for copying the attributes of another airport. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Represents an airport with information such as code, name, city, country, location , etc... 
 
 \doxysubsection{Constructor \& Destructor Documentation}
 \mbox{\Hypertarget{classAirport_a2fc0f2402c94225b9deaf76176bb887f}\label{classAirport_a2fc0f2402c94225b9deaf76176bb887f}} 
