--- a/docs/latex/classLoadingFunctions.tex
+++ b/docs/latex/classLoadingFunctions.tex
@@ -1,5 +1,14 @@
 \hypertarget{classLoadingFunctions}{}\doxysection{Loading\+Functions Class Reference}
 \label{classLoadingFunctions}\index{LoadingFunctions@{LoadingFunctions}}
+
+
+A class for loading data from CSV files.  
+
+
+
+
+{\ttfamily \#include $<$Loading\+Functions.\+h$>$}
+
 \doxysubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -14,6 +23,9 @@ static void \mbox{\hyperlink{classLoadingFunctions_acef3767bd9c7e5f9784af287e77c
 static std\+::unordered\+\_\+set$<$ \mbox{\hyperlink{classAirline}{Airline}} $>$ \mbox{\hyperlink{classLoadingFunctions_af3ed62cdd75b0fb1b1b7dc2501c6cc73}{get\+Airlines}} ()
 \begin{DoxyCompactList}\small\item\em Get the set of loaded airlines. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+A class for loading data from CSV files. 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classLoadingFunctions_af3ed62cdd75b0fb1b1b7dc2501c6cc73}\label{classLoadingFunctions_af3ed62cdd75b0fb1b1b7dc2501c6cc73}} 
