--- a/docs/latex/classLogic.tex
+++ b/docs/latex/classLogic.tex
@@ -1,5 +1,14 @@
 \hypertarget{classLogic}{}\doxysection{Logic Class Reference}
 \label{classLogic}\index{Logic@{Logic}}
+
+
+Processes all the background logic of the program ranging from counting algorithm to filter functions.  
+
+
+
+
+{\ttfamily \#include $<$Logic.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -114,6 +123,9 @@ vector$<$ int $>$ \mbox{\hyperlink{classLogic_abe2bffea6fd1ae60c3733a0077a6185d}
 void {\bfseries Normalise\+List} (list$<$ vector$<$ \mbox{\hyperlink{classAirport}{Airport}} $>$ $>$ \&list1)
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Processes all the background logic of the program ranging from counting algorithm to filter functions. 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classLogic_a847d7e4e0c4bcad31d3c6350f719b093}\label{classLogic_a847d7e4e0c4bcad31d3c6350f719b093}} 
