--- a/docs/latex/classUI.tex
+++ b/docs/latex/classUI.tex
@@ -1,5 +1,14 @@
 \hypertarget{classUI}{}\doxysection{UI Class Reference}
 \label{classUI}\index{UI@{UI}}
+
+
+Represent the \mbox{\hyperlink{classUI}{UI}} menu, where you control the background functions.  
+
+
+
+
+{\ttfamily \#include $<$UI.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -73,6 +82,9 @@ list$<$ vector$<$ \mbox{\hyperlink{classAirport}{Airport}} $>$ $>$ \mbox{\hyperl
 static void {\bfseries clear\+\_\+screen} ()
 \begin{DoxyCompactList}\small\item\em Clears the console screen by printing empty lines. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Represent the \mbox{\hyperlink{classUI}{UI}} menu, where you control the background functions. 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classUI_a1ded52ad27e7db3a699c48911ee9e1c2}\label{classUI_a1ded52ad27e7db3a699c48911ee9e1c2}} 
