--- a/docs/latex/structstd_1_1hash_3_01Airline_01_4.tex
+++ b/docs/latex/structstd_1_1hash_3_01Airline_01_4.tex
@@ -1,11 +1,23 @@
 \hypertarget{structstd_1_1hash_3_01Airline_01_4}{}\doxysection{std\+::hash\texorpdfstring{$<$}{<} Airline \texorpdfstring{$>$}{>} Struct Reference}
 \label{structstd_1_1hash_3_01Airline_01_4}\index{std::hash$<$ Airline $>$@{std::hash$<$ Airline $>$}}
+
+
+Represents the \mbox{\hyperlink{classAirline}{Airline}} hashing function for the unordered maps;.  
+
+
+
+
+{\ttfamily \#include $<$Airline.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 size\+\_\+t \mbox{\hyperlink{structstd_1_1hash_3_01Airline_01_4_a154a947cc6b9f400ae98793a4bc76aae}{operator()}} (const \mbox{\hyperlink{classAirline}{Airline}} \&airline) const
 \begin{DoxyCompactList}\small\item\em Hash function for the \mbox{\hyperlink{classAirline}{Airline}} class. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Represents the \mbox{\hyperlink{classAirline}{Airline}} hashing function for the unordered maps;. 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{structstd_1_1hash_3_01Airline_01_4_a154a947cc6b9f400ae98793a4bc76aae}\label{structstd_1_1hash_3_01Airline_01_4_a154a947cc6b9f400ae98793a4bc76aae}} 
