--- a/docs/latex/structstd_1_1hash_3_01Airport_01_4.tex
+++ b/docs/latex/structstd_1_1hash_3_01Airport_01_4.tex
@@ -1,11 +1,23 @@
 \hypertarget{structstd_1_1hash_3_01Airport_01_4}{}\doxysection{std\+::hash\texorpdfstring{$<$}{<} Airport \texorpdfstring{$>$}{>} Struct Reference}
 \label{structstd_1_1hash_3_01Airport_01_4}\index{std::hash$<$ Airport $>$@{std::hash$<$ Airport $>$}}
+
+
+Represents the \mbox{\hyperlink{classAirport}{Airport}} hashing function for the unordered maps;.  
+
+
+
+
+{\ttfamily \#include $<$Airport.\+h$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 size\+\_\+t \mbox{\hyperlink{structstd_1_1hash_3_01Airport_01_4_a792f922c8e9c43b4b1e899ac87191d89}{operator()}} (const \mbox{\hyperlink{classAirport}{Airport}} \&airport) const
 \begin{DoxyCompactList}\small\item\em Hash function for the \mbox{\hyperlink{classAirport}{Airport}} class. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Represents the \mbox{\hyperlink{classAirport}{Airport}} hashing function for the unordered maps;. 
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{structstd_1_1hash_3_01Airport_01_4_a792f922c8e9c43b4b1e899ac87191d89}\label{structstd_1_1hash_3_01Airport_01_4_a792f922c8e9c43b4b1e899ac87191d89}} 
